<resources>
    <string name="app_name">MathMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_description">Add description</string>
    <string name="add_subtitle">Add subtitle</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">upload</string>
    <string name="back">back</string>
    <string name="browse_gallery">Browse gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="submit">Submit</string>
    <string name="add_title">Add title</string>
    <string name="loading">Loading</string>
    <string name="statistics">Statistics</string>
    <string name="points_earned">Points earned</string>
    <string name="questions_answered">Questions answered</string>
    <string name="todo">TODO</string>
    <string name="choose_picture">Choose picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="forums">Forums</string>
    <string name="profile">Profile</string>
    <string name="add_forum">Add Forum</string>
    <string name="notifications">Notifications</string>
    <string name="CON">Continue</string>
    <string name="subject">Subject</string>
    <string name="what_is_your_question">What is your question?</string>
    <string name="title">Title</string>
    <string name="subject_exmp">Subject : geomery</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam posuere libero dui, nec convallis lorem tincidunt id. Nunc aliquet ligula vitae laoreet varius. Sed mattis turpis non nisl accumsan, ut pulvinar arcu mattis. Etiam id massa nec purus congue tincidunt eu sit amet nulla. Sed ultrices ipsum ac est imperdiet imperdiet. Donec cursus nisi et leo luctus, in suscipit ex congue. Etiam sagittis sodales metus. Sed nisl eros, interdum quis posuere nec, efficitur id eros.</string>
    <string name="questions_asked">Questions asked</string>
    <string name="comments">Comments</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="post_comment">Post comment</string>
    <string name="go_to_comments"><u>Go to comments</u></string>
    <string name="message">Message</string>
    <string name="likes">likes</string>
    <string name="comment_content">Comment content</string>
    <string name="like_count">Like count</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rank">r</string>
    <string name="score">score</string>
    <string name="update_profile">Update profile</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>