<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="2dp"
    android:background="@color/darkBG"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/rank" />

    <include layout="@layout/profile_pic_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:ems="22"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/score"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>