<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/darkBG"
    android:layout_height="match_parent"
    tools:context=".AddForumActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"

        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/go_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/darkBG"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/go_back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_image"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/dark_grey"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/upload_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/upload"
            app:srcCompat="@drawable/file_upload" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/take_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="20"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/take_photo"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/browse_gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="20"
            android:backgroundTint="@color/purple"
            android:text="@string/browse_gallery"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/add_title"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:background="@drawable/corner_radius"
            android:ems="22"
            android:inputType="text"
            android:textColor="@color/white"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/subject"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/subject_et"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/corner_radius"
            android:ems="22"
            android:inputType="text"
            android:textColor="@color/white"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/CON"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>