<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/darkBG"
    android:layout_height="match_parent"
    android:contentDescription="@string/todo"
    tools:context=".CommentsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/dark_grey"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/go_back"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/comments"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:backgroundTint="#353535"
            app:cardCornerRadius="20dp"
            app:contentPadding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:layout_editor_absoluteX="241dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"

                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/default_pfp" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/comment_input"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:autofillHints=""
                        android:background="@drawable/corner_radius"
                        android:ems="10"
                        android:hint="@string/write_your_comment"
                        android:inputType="text"
                        android:gravity="top|start"
                        android:paddingStart="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="#979797"
                        android:textSize="12sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#595959"
            android:text="@string/post_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>