<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/darkBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/darkBG"
            android:contentDescription="@string/todo"
            android:src="@drawable/settings_icon"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pfp"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_height="120dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/default_pfp" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bio_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/darkBG"
            android:contentDescription="@string/todo"
            android:src="@drawable/logout_icon"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/statistics" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/QA_tv"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_answered" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/points_tv"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/points_earned" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>